<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FF0044"
    >

	<TextView
		android:id="@+id/titulo"
		android:text="@string/eTitulo"
		android:layout_marginTop="40px"
		android:layout_width="340px"
		android:layout_height="45px"
		android:layout_gravity="center"
		android:textSize="38px"
		android:textStyle="bold"
		android:textColor="#FFFFFF">
	</TextView>
	
	<Button
		android:id="@+id/bAudiolibros"
		android:text="@string/eAudiolibros"
		android:layout_marginTop="40px"
		android:layout_width="200px"
		android:layout_height="70px"
		android:layout_below="@id/titulo"
		android:layout_gravity="center"
		android:onClick="mAudiolibros"
		android:textSize="24px"
		android:background="@drawable/degradado2"
		android:textColor="#FFFFFF"
		android:shadowRadius="5"
		android:shadowColor="#FFFFFF"
		>
	</Button>
	
	<Button
		android:id="@+id/bLibros"
		android:text="@string/eLibros"
		android:layout_marginTop="40px"
		android:layout_width="200px"
		android:layout_height="70px"
		android:layout_below="@id/titulo"
		android:layout_gravity="center"
		android:onClick="mLibros"
		android:background="@drawable/degradado2"
		android:textColor="#FFFFFF"
		android:shadowRadius="5"
		android:shadowColor="#FFFFFF"
		>
	</Button>
	
	
	<Button
		android:id="@+id/bEjercicio"
		android:text="@string/eEjercicios"
		android:layout_marginTop="40px"
		android:layout_width="200px"
		android:layout_height="70px"
		android:layout_below="@id/titulo"
		android:layout_gravity="center"
		android:background="@drawable/degradado2"
		android:textColor="#FFFFFF"
		android:shadowRadius="5"
		android:shadowColor="#FFFFFF"
		>
	</Button>
	
	<Button
		android:id="@+id/bTeoria"
		android:text="@string/eTeoria"
		android:layout_marginTop="40px"
		android:layout_width="200px"
		android:layout_height="70px"
		android:layout_below="@id/titulo"
		android:layout_gravity="center"
		android:onClick="mTeoria"
		android:background="@drawable/degradado2"
		android:textColor="#FFFFFF"
		android:shadowRadius="5"
		android:shadowColor="#FFFFFF"
		>
	</Button>
	
	<Button
		android:id="@+id/bSalir"
		android:text="@string/eSalir"
		android:layout_marginTop="40px"
		android:layout_width="200px"
		android:layout_height="70px"
		android:layout_below="@id/titulo"
		android:layout_gravity="center"
		android:onClick="salir"
		android:background="@drawable/degradado2"
		android:textColor="#FFFFFF"
		android:shadowRadius="5"
		android:shadowColor="#FFFFFF"
		>
	</Button>
    
</LinearLayout>
